--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="container text-center p-5">
-        <h1 class="fw-bold">Shaheer</h1>
+        <h1 class="fw-bold">Muhammad Shaheer Bin Farid</h1>
         <p stely="color:grey">Subtitle</p>
     </div>
     <div class="container">
