--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="container text-center p-5">
         <h1 class="fw-bold">Muhammad Shaheer Bin Farid</h1>
-        <p stely="color:grey">Subtitle</p>
+        <p stely="color:grey">Student</p>
     </div>
     <div class="container">
     <div class="row">
@@ -20,14 +20,14 @@
             <div class="container">
                 <h2 class="fw-bold">Your role</h2>
                 <p>Paragraph summary of who you are. This is sample text. This is sample text. This is sample text. This is sample text. This is sample text.</p>
-                <p style="display:inline" class="me-4">youremail@email.com</p>
+                <p style="display:inline" class="me-4">shaheerfarid7@gmail.com</p>
                 <p style="display:inline" class="me-4">your-phone-number</p>
                 <a href="">your-LinkedIn</a>
             </div>
             <div class="container mt-5">
                 <h2 class="fw-bold">Education</h2>
                 <h5 class="fw-bold">School name</h5>
-                <p>Major, additional description<br>Bachelor of Engineering in Computer science (example)</p>
+                <p>Major: <br>Bachelor of Engineering in Computer science</p>
             </div>
             <div class="container mt-5">
                 <h2 class="fw-bold">Work Experience</h2>
